Diagram section: add Beth's floorplan in place of dummy

--- a/theme-testing/index.html
+++ b/theme-testing/index.html
@@ -65,7 +65,7 @@
 			<div class="home-diagram__title">Our Spaces:<br/>A Diagram</div>
 			<!--span>Because no one was born knowing where a common room is.</span-->
 			<div class="home-diagram__content">
-				<img src="img/dummy-floor-plan.png" height="300px" alt="Floor diagram of Scholars' Lab spaces" title="By the lovely Beth Mitchell">
+				<img src="img/alderman-floorplan.svg" height="300px" alt="Floor diagram of Scholars' Lab spaces" title="By the lovely Beth Mitchell">
 			</div>
 		</div>
 		
