Style prototype of Makerspace section
-NB: idea is in iPad sketch of KBD's

-Explanations:
1.) index.html
  a. Restructure Makerspace section: reorder contents, set up hours
     like you did for statistics boxes in TBTA.

2.) style.css/style.scss
  a. Change most line heights to 24px. (May put that into rem later;
     am mixing units af rn.)
  b. Add color etc. to makerspace section.
  c. Specify font and padding styles for spatial technologies section.

--- a/theme-testing/index.html
+++ b/theme-testing/index.html
@@ -71,12 +71,16 @@
 		
 		<div class="home__makerspace-corner">
 			<div class="home-makerspace__title">Makerspace</div>
-			<div class="home-makerspace__content">
-				<div class="home-makerspace__text"><!-- Insert short description, a pic, and event preview, or whatever @Shane et al. find useful -->The Scholars’ Lab Makerspace is a place for tinkering and experimentation with technologies like desktop fabrication, physical computing, and augmented reality. Open to everyone, we specialize in applications and research questions in the humanities and arts.
-				Find things like 3-D printing, wearable technologies, physical computing, & more at our space <a href="#">in the middle of the Scholars' Lab Common Area</a>.</div>
-				<div class="home-makerspace__hours"><span>Staffed Hours:</span>Mondays: 1-7pm<br/>Tuesdays: 1-9pm<br/>Wednesday: 1-7pm<br/>Thursday: 1-9pm<br/>Friday: 1-5pm</div>
-				<div class="home-makerspace__cta"><a href="#">Makerspace Home</a></div>
+			<div class="home-makerspace__hours">
+				<div>Staffed Hours</div>
+				<span>Mondays:</span>1-7pm<br/>
+				<span>Tuesdays:</span>1-9pm<br/>
+				<span>Wednesdays:</span>1-7pm<br/>
+				<span>Thursdays:</span>1-9pm<br/>
+				<span>Fridays:</span>1-5pm
 			</div>
+			<div class="home-makerspace__text"><!-- Insert short description, a pic, and event preview, or whatever @Shane et al. find useful --><strong>The Scholars’ Lab Makerspace</strong> is a place for tinkering and experimentation with technologies like desktop fabrication, physical computing, and augmented reality. Open to everyone, we specialize in applications and research questions in the humanities and arts.<br/><br/>Find things like 3-D printing, wearable technologies, physical computing, & more at <strong>our space <!--a href="#"-->in the middle of the Scholars' Lab Common Area<!--/a-->.</strong></div>
+			<div class="home-makerspace__cta"><a href="#">Makerspace Home</a></div>
 		</div>
 
 		<div class="home__gis-corner">
