Update index.html w/ body of theme-testing/index.html
-Any changes to content or classes/structure since last merge with
 master will be reflected here

-NB: content changes reflected b/c theme-testing branch is synced with
     kbd-content branch

--- a/index.html
+++ b/index.html
@@ -15,68 +15,61 @@ title: Home
 
 <div class="home-main-content">
 	<div class="home__hero">
-		<!--div class="home-hero__title" title="And our Soylent is not.">
-			<!--span>At the Scholars' Lab,</span><br/>
-			<span>digital humanities</span>
-			<span>is people.</span>
-		</div-->
-		<div class="home-hero__text">At the Scholars' Lab, our most important digital humanities <span class="if-big"><br/></span>project is our community of scholars: <span>mentors,</span> <span>learners,</span> <span>researchers,</span> <span>teachers,</span> <span>crafters & </span><span>makers,</span> <span>collaborators.</span> Come help us explore what that means—we'd love you to be a part of our community.</div>
+		<div class="home-hero__text">At the Scholars' Lab, our most important digital humanities project is our community of scholars:<br/><span>mentors,</span> <span>learners,</span> <span>researchers,</span> <span>teachers,</span> <span>crafters & </span><span>makers,</span> <span>collaborators.</span><br/><br/>Come help us explore what that means—we'd love you to be a part of our community.</div>
 	 <!-- "So let's explore what that means, because we'd love for you to be a part of it." -->
 	</div>
 
 	<div class="home__faq">
-		<div class="home-faq__title">Frequently Asked Questions</div>
+		<div class="home-faq__title">Frequently<br/>Asked<br/>Questions</div>
 		<div class="home-faq__content">
 			<div class="home-faq__subtitle">Curious about digital humanities and the Scholars' Lab? Check out answers to common questions:</div>
 			<div class="home-faq__questions">
 				<div><a href="#">What is digital humanities (DH)?</a></div>
-				<div><a href="#">What is the Scholars' Lab??</a></div>
+				<div><a href="#">What is the Scholars' Lab?</a></div>
 				<div><a href="#">How can the Scholars' Lab fit into my work?</a></div>
 				<div><a href="#">How does the Lab fit into the UVA Library?</a></div>
 			</div>
-			<div class="home-faq__cta">Find answers to these questions and more. <a href="#">FAQ Home</a></div>
+			<div class="home-faq__cta"><!--Find answers to these questions and more:<br/--><a href="#">FAQ Home</a></div>
 		</div>
 	</div>
-
-	<!-- example: A round-up of some questions about the Scholars' Lab that we encounter most. What is digital humanities? How does the Scholars' Lab fit with what you're doing? How do we connect to the University of Virginia Library system? Find answers to that and more <a>here</a>. -->
 
 	<div class="home__contact--1">
 		<div class="home-contact__title">Contact Us</div>
-		<div class="home-contact__cta">Curious about experimental & digital humanities research & teaching? <a href="#">Click here</a> to discover ways to join our community&mdash;absolutely zero DH experience needed.</div> <!-- should link to contact page -->
+		<div class="home-contact__content">Curious about experimental & digital humanities research & teaching?<br/><br/><a href="#">Click here</a> to discover ways to join our community&mdash;absolutely zero DH experience needed.</div> <!-- should link to contact page -->
 	</div>
 
-	
-	<div class="home__grads">
-		<div class="home-grads__title">Opportunities for Graduate Students</div>
-		<div class="home-grads__content">
-			<div class="home-grads__subtitle">One of our primary goals is supporting emerging scholars and digital humanities practitioners&mdash;particularly UVa graduate students. Something about variety of opportunities, or whatever Brandon ends up writing. This section explores all the opportunities we offer to graduate students, from our <a href="#">Praxis Program</a> annual DH graduate fellow team and other <a href="#">fellowships</a> to <a href="#">informal mentorship opportunities</a>.</div>
-			<div class="home-grads__cta"><a href="#">Grad Opportunities Home</a></div>
-		</div>
+	<div class="home__students">
+		<div class="home-students__title">Student<br/>Opportunities</div>
+		<div class="home-students__content">One of our primary missions is to support the work of emerging scholars and digital humanities practitioners&mdash;particularly UVa graduate students.<br/><br/>We offer a variety of fellowships and opportunities to this end, which collectively aim to support graduate students during the full measure of their time at UVA.<br/><br/>From the innovative <a href="praxis.scholarslab.org">Praxis Program</a> to professionalization training for students on the DH job market, we're here to help whether you're looking to answer a specific call for applications or simply looking to discuss your research.</div>
+		<div class="home-students__cta"><a href="#">See All<!--Student Opportunities Home--></a></div>
 	</div>
 	
-
 	<div class="home__office-hours">
 		<div class="home-hours__title">Open Office Hours</div>
-		<div class="home-hours__when">Every Monday during fall and spring term, 10am-11:30am.</div>
+		<div class="home-hours__when">Every Monday during fall and spring term,<br/>10am-11:30am.</div>
 		<div class="home-hours__info">Stop by the discussion area just inside the Scholars' Lab Common Room to chat with our DH experts about your ideas, from your earliest questions and broad ideas through formal projects. (See diagram for where we are!)</div>
 	</div>
 
 	<div class="home__floor-diagram">
-		<div class="home-diagram__title">Our Spaces: A Diagram</div>
+		<div class="home-diagram__title">Our Spaces:<br/>A Diagram</div>
 		<!--span>Because no one was born knowing where a common room is.</span-->
 		<div class="home-diagram__content">
-			<img src="assets/img/dummy-floor-plan.png" height="300px" alt="Floor diagram of Scholars' Lab spaces" title="By the lovely Beth Mitchell">
+			<img src="img/alderman-floorplan.svg" height="300px" alt="Floor diagram of Scholars' Lab spaces" title="By the lovely Beth Mitchell">
 		</div>
 	</div>
 	
 	<div class="home__makerspace-corner">
 		<div class="home-makerspace__title">Makerspace</div>
-		<div class="home-makerspace__content">
-			<div class="home-makerspace__text"><!-- Insert short description, a pic, and event preview, or whatever @Shane et al. find useful -->The Scholars’ Lab Makerspace is a place for tinkering and experimentation with technologies like desktop fabrication, physical computing, and augmented reality. Open to everyone, we specialize in applications and research questions in the humanities and arts.
-			Find things like 3-D printing, wearable technologies, physical computing, & more at our space <a href="#">in the middle of the Scholars' Lab Common Area</a>.</div>
-			<div class="home-makerspace__hours"><span>Staffed Hours:</span>Mondays: 1-7pm<br/>Tuesdays: 1-9pm<br/>Wednesday: 1-7pm<br/>Thursday: 1-9pm<br/>Friday: 1-5pm</div>
-			<div class="home-makerspace__cta"><a href="#">Makerspace Home</a></div>
+		<div class="home-makerspace__hours">
+			<div>Staffed Hours</div>
+			<span>Mondays:</span>1-7pm<br/>
+			<span>Tuesdays:</span>1-9pm<br/>
+			<span>Wednesdays:</span>1-7pm<br/>
+			<span>Thursdays:</span>1-9pm<br/>
+			<span>Fridays:</span>1-5pm
 		</div>
+		<div class="home-makerspace__text"><!-- Insert short description, a pic, and event preview, or whatever @Shane et al. find useful --><strong>The Scholars’ Lab Makerspace</strong> is a place for tinkering and experimentation with technologies like desktop fabrication, physical computing, and augmented reality. Open to everyone, we specialize in applications and research questions in the humanities and arts.<br/><br/>Find things like 3-D printing, wearable technologies, physical computing, & more at <strong>our space <!--a href="#"-->in the middle of the Scholars' Lab Common Area<!--/a-->.</strong></div>
+		<div class="home-makerspace__cta"><a href="#">Makerspace Home</a></div>
 	</div>
 
 	<div class="home__gis-corner">
@@ -92,7 +85,7 @@ title: Home
 	</div>
 
 	<div class="home__learn">
-		<div class="home-learn__title">Learning Resources: Our Starter Kits</div>
+		<div class="home-learn__title">Learning Resources:<br/>Our Starter Kits</div>
 		<div class="home-learn__content">Starter kits contain example projects, novice-friendly explainers and tutorials, and other hints for dipping your toes into a DH method or figuring out what method you want to learn. Maybe you don't even know you're interested in DH yet, or want to check out the basics of mapping or web design before you come talk to us. Curated by our in-house experts on each topic.</div>
 		<div class="home-learn__links">
 			<a href="#">Peruse all starter kits</a> or check out our most popular resources:
