Fix broken links: floorplan filepath, praxis URL

--- a/theme-testing/index.html
+++ b/theme-testing/index.html
@@ -50,7 +50,7 @@
 		
 		<div class="home__students">
 			<div class="home-students__title">Student<br/>Opportunities</div>
-			<div class="home-students__content">One of our primary missions is to support the work of emerging scholars and digital humanities practitioners&mdash;particularly UVa graduate students.<br/><br/>We offer a variety of fellowships and opportunities to this end, which collectively aim to support graduate students during the full measure of their time at UVA.<br/><br/>From the innovative <a href="praxis.scholarslab.org">Praxis Program</a> to professionalization training for students on the DH job market, we're here to help whether you're looking to answer a specific call for applications or simply looking to discuss your research.</div>
+			<div class="home-students__content">One of our primary missions is to support the work of emerging scholars and digital humanities practitioners&mdash;particularly UVa graduate students.<br/><br/>We offer a variety of fellowships and opportunities to this end, which collectively aim to support graduate students during the full measure of their time at UVA.<br/><br/>From the innovative <a href="http://praxis.scholarslab.org/">Praxis Program</a> to professionalization training for students on the DH job market, we're here to help whether you're looking to answer a specific call for applications or simply looking to discuss your research.</div>
 			<div class="home-students__cta"><a href="#">See All<!--Student Opportunities Home--></a></div>
 		</div>
 		
