--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ title: Home
 
 	<div class="home__students">
 		<div class="home-students__title">Student<br/>Opportunities</div>
-		<div class="home-students__content">One of our primary missions is to support the work of emerging scholars and digital humanities practitioners&mdash;particularly UVa graduate students.<br/><br/>We offer a variety of fellowships and opportunities to this end, which collectively aim to support graduate students during the full measure of their time at UVA.<br/><br/>From the innovative <a href="praxis.scholarslab.org">Praxis Program</a> to professionalization training for students on the DH job market, we're here to help whether you're looking to answer a specific call for applications or simply looking to discuss your research.</div>
+		<div class="home-students__content">One of our primary missions is to support the work of emerging scholars and digital humanities practitioners&mdash;particularly UVa graduate students.<br/><br/>We offer a variety of fellowships and opportunities to this end, which collectively aim to support graduate students during the full measure of their time at UVA.<br/><br/>From the innovative <a href="http://praxis.scholarslab.org/">Praxis Program</a> to professionalization training for students on the DH job market, we're here to help whether you're looking to answer a specific call for applications or simply looking to discuss your research.</div>
 		<div class="home-students__cta"><a href="#">See All<!--Student Opportunities Home--></a></div>
 	</div>
 	
@@ -54,7 +54,7 @@ title: Home
 		<div class="home-diagram__title">Our Spaces:<br/>A Diagram</div>
 		<!--span>Because no one was born knowing where a common room is.</span-->
 		<div class="home-diagram__content">
-			<img src="img/alderman-floorplan.svg" height="300px" alt="Floor diagram of Scholars' Lab spaces" title="By the lovely Beth Mitchell">
+			<img src="assets/img/alderman-floorplan.svg" height="300px" alt="Floor diagram of Scholars' Lab spaces" title="By the lovely Beth Mitchell">
 		</div>
 	</div>
 	
