--- a/pages/logos.html
+++ b/pages/logos.html
@@ -1,11 +1,21 @@
 ---
 layout: no-header
+title: Logo Testing
 permalink: /logos/
 ---
 
-<h1>Test!</h1>
 {% assign logo_pics = site.static_files | where_exp: "item", "item.path contains 'logo-testing'" %}
 
-{% for pic in logo_pics %}
-<img src="{{ pic.path }}" alt="test" style="display:inline-block;height=300px !important;">
-{% endfor %}
+<div class="logo-testing__title">Logo Testing Gallery</div>
+<!--div class="logo-testing__stats">
+	Number of Images:<span>{{ logo_pics.length }}</span><br/>
+	Media:<span>insert other stats</span>
+</div-->
+<div class="logo-testing__gallery">
+	{% for pic in logo_pics reversed %}
+	<div class="logo-gallery__item">
+		<img class="logo-item__img" src="{{ pic.path }}" alt="test">
+		<span class="logo-item__title">Sketch {{ logo_pics.size | minus:forloop.index0 }}</span>
+	</div>
+	{% endfor %}
+</div>
