--- a/theme-testing/nav2.html
+++ b/theme-testing/nav2.html
@@ -14,7 +14,7 @@
 <body>
 	<div class="nav-wrapper">
 		<div class="nav__arrow">
-			<a href="#home">&lsaquo;<!--img src="" alt="back arrow"--></a>
+			<a href="http://maybe.scholarslab.org"><img src="img/_nav/left-arrow-white.svg" alt="back arrow"></a>
 		</div>
 	</div>
 	<div class="home-landing-grid">
