Add 'back to top' arrow

--- a/theme-testing/nav2.html
+++ b/theme-testing/nav2.html
@@ -13,11 +13,14 @@
 </head>
 <body>
 	<div class="nav-wrapper">
-		<div class="nav__arrow">
+		<div class="nav__arrow--back">
 			<a href="http://maybe.scholarslab.org"><img src="img/_nav/left-arrow-white.svg" alt="back arrow"></a>
 		</div>
+		<div class="nav__arrow--top">
+			<a href="#top"><img src="img/_nav/left-arrow-white.svg" alt="back arrow"></a>
+		</div>
 	</div>
-	<div class="home-landing-grid">
+	<div class="home-landing-grid" id="top">
 		<div class="home-title-wrapper">
 			<div class="home-title__text">The<br/>Scholars'<br/>Lab</div>
 		</div>
