Comment out long subtitle, insert comment to explain inventory section

--- a/theme-testing/pages/makerspace.html
+++ b/theme-testing/pages/makerspace.html
@@ -76,7 +76,8 @@
 
 		<div class="makerspace__inventory">
 			<div class="maker-inventory__title">What&#8217;s in the Makerspace?</div>
-			<div class="maker-inventory__list"> <!-- split internally per prototype drawing -->
+			<!-- insert subtitle saying that this is a rundown of the inventory. Note here about where the software is located (i.e., on fancy computers located in the Makerspace - anyone is welcome to come use.) -->
+			<div class="maker-inventory__list">
 				<!-- 3D Printing -->
 				<ul class="maker-list__3d">
 					<span>3D Printing</span>
@@ -110,7 +111,8 @@
 				<!-- Software Suites: -->
 				<ul class="maker-list__software">
 					<span>Software</span>
-					<span>High-end Mac and PC with maker software installed</span>
+					<!-- insert this as an aside somewhere: -->
+					<!--span>High-end Mac and PC with maker software installed</span-->
 					<li>Adobe Creative Suite</li>
 					<li>Agisoft PhotoScan</li>
 					<li>ArcGIS, qGIS</li>
