Add dummy floor diagram in public spaces section

--- a/theme-testing/pages/makerspace.html
+++ b/theme-testing/pages/makerspace.html
@@ -168,7 +168,8 @@
 
 		<div class="makerspace__diagram">
 			<!-- commission diagram from Beth -->
-			<div>Diagram!!!</div>
+			<!--div>Diagram!!!</div-->
+			<div class="maker-diagram__img"><img src="../img/alderman-floorplan.svg" alt="Makerspace dummy floorplan"></div>
 		</div>
 
 		<div class="makerspace__questions">
