--- a/theme-testing/pages/makerspace.html
+++ b/theme-testing/pages/makerspace.html
@@ -51,19 +51,23 @@
 		<div class="makerspace__people">
 			<div class="maker-people__title">Makerspace Technologists</div>
 			<div class="maker-people__students">
-				<span>Student Technologists</span>
-				<p><strong>Catherine Addington:</strong> 3D Printing, Digital Humanities<br />
-				<strong>Andrew Carl:</strong> 3D Printing, Electronics, Wearables<br />
-				<strong>Nic Dalton:</strong> 3D Printing, Modelling<br />
-				<strong>Brandon Phan:</strong> 3D Printing<br />
-				<strong>Marysia Serafin:</strong> 3D Printing</p>
+				<div class="maker-students__label">Student Technologists</div>
+				<div class="maker-students__list">
+					<span>Catherine Addington:</span>3D Printing, Digital Humanities<br/>
+					<span>Andrew Carl:</span>3D Printing, Electronics, Wearables<br/>
+					<span>Nic Dalton:</span>3D Printing, Modelling<br/>
+					<span>Brandon Phan:</span>3D Printing<br/>
+					<span>Marysia Serafin:</span>3D Printing
+				</div>
 			</div>
 			<div class="maker-people__staff">
-				<span>Scholars’ Lab Staff Technologists</span>
-				<p><strong>Jeremy Boggs:</strong> 3D Printing, Electronics, Programming, Digital Humanities<br />
-				<strong>Shane Lin:</strong> 3D Printing, Programming, Digital Humanities<br />
-				<strong>Laura Miller:</strong> 3D Printing, Photogrammetry, Digital Humanities<br />
-				<strong>Ammon Shepherd:</strong> 3D Printing, Electronics, Programming, Digital Humanities</p>
+				<div class="maker-staff__label">Scholars’ Lab Staff Technologists</div>
+				<div class="maker-staff__list">
+					<span>Jeremy Boggs:</span>3D Printing, Electronics, Programming, Digital Humanities<br/>
+					<span>Shane Lin:</span>3D Printing, Programming, Digital Humanities<br/>
+					<span>Laura Miller:</span>3D Printing, Photogrammetry, Digital Humanities<br/>
+					<span>Ammon Shepherd:</span>3D Printing, Electronics, Programming, Digital Humanities
+				</div>
 			</div>
 		</div>
 
