Paste in grid output from Python program

--- a/theme-testing/pages/makerspace.html
+++ b/theme-testing/pages/makerspace.html
@@ -69,6 +69,71 @@
 					<span>Ammon Shepherd:</span>3D Printing, Electronics, Programming, Digital Humanities
 				</div>
 			</div>
+			<div class="maker-people__grid">
+				<div class="maker-grid__skill" id="ppl1skill1"></div>
+				<div class="maker-grid__skill" id="ppl1skill2"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__skill" id="ppl2skill1"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__skill" id="ppl2skill3"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__skill" id="ppl2skill7"></div>
+				<div class="maker-grid__skill" id="ppl3skill1"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__skill" id="ppl3skill4"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__skill" id="ppl4skill1"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__skill" id="ppl5skill1"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__skill" id="ppl6skill1"></div>
+				<div class="maker-grid__skill" id="ppl6skill2"></div>
+				<div class="maker-grid__skill" id="ppl6skill3"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__skill" id="ppl6skill6"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__skill" id="ppl7skill1"></div>
+				<div class="maker-grid__skill" id="ppl7skill2"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__skill" id="ppl7skill6"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__skill" id="ppl8skill1"></div>
+				<div class="maker-grid__skill" id="ppl8skill2"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__skill" id="ppl8skill5"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__skill" id="ppl9skill1"></div>
+				<div class="maker-grid__skill" id="ppl9skill2"></div>
+				<div class="maker-grid__skill" id="ppl9skill3"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__default"></div>
+				<div class="maker-grid__skill" id="ppl9skill6"></div>
+				<div class="maker-grid__default"></div>
+			</div>
 		</div>
 
 		<div class="makerspace__usage">
