--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -22,7 +22,7 @@ title: Makerspace | Scholars' Lab
   <div class="makerspace__ethos">
     <div class="maker-ethos__title">Ethos</div>
     <div class="maker-ethos__text">
-      <p>The Scholars&#8217; Lab Makerspace is a place for tinkering and experimentation with technologies like desktop fabrication, physical computing, and augmented reality. Open to everyone, we specialize in applications and research questions in the humanities and arts.</p>
+      <p>The Scholars&#8217; Lab Makerspace is a place for crafting, tinkering, and experimentation with technologies like desktop fabrication, physical computing, and augmented reality. <strong>Open to everyone</strong>—absolutely no prior experience needed!—we specialize in hands-on approaches to research questions in the humanities and arts.</p>
       <p>Informed by a rich tradition of Library support for exploring materiality in <a href="http://smallnotes.library.virginia.edu/">Special Collections</a> and the Fine Arts Library <a href="http://uvamagazine.org/articles/the_tactile_library">Materials Collection</a>, and for participating in the physical-made-digital in both the <a href="http://scholarslab.org/">Scholars&#8217; Lab</a> and the <a href="http://www.library.virginia.edu/blog/libraries/dml/">Digital Media Lab</a> in Clemons, our Makerspace Technologists can help faculty and student researchers evaluate new approaches to their work, and consider both the hows and the whys of making.</p>
       <p>Learning <i>how</i> to do something with humanities technology gives us a more informed perspective on <i>why</i> we do things in the humanities. <strong>Both are vital.</strong></p>
     </div>
@@ -234,7 +234,7 @@ title: Makerspace | Scholars' Lab
   </div>
 
   <div class="makerspace__questions">
-    <div class="maker-questions__text">Questions? Reassuring text about whether you belong in a Makerspace? (Hint: you do.) Email <a href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a> something something.</div>
+    <div class="maker-questions__text">Questions? Hesistant about joinig us in the Makerspace? (Answer: you do! But we're happy to meet with you, answer questions, and give you a tour to help you feel more at home.) Email <a href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a> to let us know you're curious about our Makerspace.</div>
   </div>
 </div> <!-- end main content -->
 
