Change <title>: 'Homepage' -> 'Scholars' Lab'

--- a/theme-testing/index.html
+++ b/theme-testing/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Homepage</title>
+	<title>Scholars' Lab</title>
 	<!-- Fonts: -->
 	<link rel="stylesheet" href="https://use.typekit.net/xpo3dxq.css">
 	<link href="https://fonts.googleapis.com/icon?family=Raleway:200,400,700,900|Montserrat:200,400,700|Oswald:200,400,600|Inconsolata:400,700" rel="stylesheet">
