Change class for 'metadata' to one for 'due-date' (accuracy)

--- a/pages/fellowship.html
+++ b/pages/fellowship.html
@@ -12,7 +12,7 @@ post-title: Praxis Program Fellowships
 
 	<div class="fellowship__title">{{ page.post-title }}</div>
 
-	<div class="fellowship__metadata">
+	<div class="fellowship__due-date">
 		<strong>Applications are due February 15th, 2018 for the 2018-2019 cohort.</strong> Please <a href="https://eepurl.com/fJ9J">subscribe</a> to the Scholars&#8217; Lab newsletter or check back here for further information.
 	</div>
 
