--- a/theme-testing/pages/research.html
+++ b/theme-testing/pages/research.html
@@ -13,7 +13,7 @@
 
   <link href="https://fonts.googleapis.com/icon?family=Raleway:200,400,700,900|Montserrat:200,400,700|Oswald:200,400,600|Inconsolata:400,700" rel="stylesheet">
   <link rel="stylesheet" href="https://use.typekit.net/xpo3dxq.css">
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="../style.css">
   <link rel="canonical" href="http://localhost:4000/research/">
   <link rel="alternate" type="application/rss+xml" title="Scholars’ Lab" href="/feed.xml">
 
@@ -39,7 +39,7 @@
 
   <!-- internal projects: -->
   <div class="research-items__internal">
-    <div class="research-internal__title">Internal Projects and Community Service</div>
+    <div class="research-internal__big-title">Internal Projects and Community Service</div>
     <div class="research-internal__subtitle">Software, projects, and tools developed by Scholars’ Lab staff.</div>
     <div class="research-items-wrapper">
     
@@ -47,7 +47,7 @@
       <div class="research__item">
         <a href="/research/geoloader" aria-label="Geoloader">
           <div class="research-item__img">
-            <img src="/assets/img/research/clickykbd-geoloader.png" alt="Geoloader">
+            <img src="../../assets/img/research/clickykbd-geoloader.png" alt="Geoloader">
           </div>
           <div class="research-item__title">Geoloader</div>
         </a>
@@ -57,7 +57,7 @@
       <div class="research__item">
         <a href="/research/neatline" aria-label="Neatline">
           <div class="research-item__img">
-            <img src="/assets/img/research/neatline1.jpg" alt="Neatline">
+            <img src="../../assets/img/research/neatline1.jpg" alt="Neatline">
           </div>
           <div class="research-item__title">Neatline</div>
         </a>
@@ -67,7 +67,7 @@
       <div class="research__item">
         <a href="/research/omeka-plugins" aria-label="Omeka Plugins">
           <div class="research-item__img">
-            <img src="/assets/img/research/omeka-plugins2.png" alt="Omeka Plugins">
+            <img src="../../assets/img/research/omeka-plugins2.png" alt="Omeka Plugins">
           </div>
           <div class="research-item__title">Omeka Plugins</div>
         </a>
@@ -77,7 +77,7 @@
       <div class="research__item">
         <a href="/research/praxis-program" aria-label="Praxis Program">
           <div class="research-item__img">
-            <img src="/assets/img/research/praxis.png" alt="Praxis Program">
+            <img src="../../assets/img/research/praxis.png" alt="Praxis Program">
           </div>
           <div class="research-item__title">Praxis Program</div>
         </a>
@@ -87,7 +87,7 @@
       <div class="research__item">
         <a href="/research/project-blacklight" aria-label="Project Blacklight">
           <div class="research-item__img">
-            <img src="/assets/img/research/blacklight.jpg" alt="Project Blacklight">
+            <img src="../../assets/img/research/blacklight.jpg" alt="Project Blacklight">
           </div>
           <div class="research-item__title">Project Blacklight</div>
         </a>
@@ -97,7 +97,7 @@
       <div class="research__item">
         <a href="/research/solrmarc" aria-label="Solrmarc">
           <div class="research-item__img">
-            <img src="/assets/img/research/RooshInf3ktion-solrmarc.png" alt="Solrmarc">
+            <img src="../../assets/img/research/RooshInf3ktion-solrmarc.png" alt="Solrmarc">
           </div>
           <div class="research-item__title">Solrmarc</div>
         </a>
@@ -107,7 +107,7 @@
       <div class="research__item">
         <a href="/research/spatial-search-and-delivery" aria-label="Spatial Humanities">
           <div class="research-item__img">
-            <img src="/assets/img/research/spatialhumanities1.jpg" alt="Spatial Humanities">
+            <img src="../../assets/img/research/spatialhumanities1.jpg" alt="Spatial Humanities">
           </div>
           <div class="research-item__title">Spatial Humanities</div>
         </a>
@@ -117,7 +117,7 @@
       <div class="research__item">
         <a href="/research/speaking-in-code" aria-label="Speaking In Code">
           <div class="research-item__img">
-            <img src="/assets/img/research/speakingincodescreengrab.png" alt="Speaking In Code">
+            <img src="../../assets/img/research/speakingincodescreengrab.png" alt="Speaking In Code">
           </div>
           <div class="research-item__title">Speaking In Code</div>
         </a>
@@ -127,7 +127,7 @@
       <div class="research__item">
         <a href="/research/the-scholars-lab" aria-label="The Scholars' Lab">
           <div class="research-item__img">
-            <img src="/assets/img/research/none" alt="The Scholars' Lab">
+            <img src="../../assets/img/research/none" alt="The Scholars' Lab">
           </div>
           <div class="research-item__title">The Scholars' Lab</div>
         </a>
@@ -138,7 +138,7 @@
 
   <!-- collaborative projects: -->
   <div class="research-items__collab">
-    <div class="research-collab__title">Scholarly Collaborations</div>
+    <div class="research-collab__big-title">Scholarly Collaborations</div>
     <div class="research-collab__subtitle">Selected Scholars’ Lab collaborations with faculty and graduate students.</div>
     <div class="research-items-wrapper">
     
@@ -146,7 +146,7 @@
       <div class="research__item">
         <a href="/research/bibliographic-society-of-virginia" aria-label="Bibliographic Society of Virginia">
           <div class="research-item__img">
-            <img src="/assets/img/research/bsuva.png" alt="Bibliographic Society of Virginia">
+            <img src="../../assets/img/research/bsuva.png" alt="Bibliographic Society of Virginia">
           </div>
           <div class="research-item__title">Bibliographic Society of Virginia</div>
         </a>
@@ -156,7 +156,7 @@
       <div class="research__item">
         <a href="/research/collective-biographies-of-women" aria-label="Collective Biographies of Women">
           <div class="research-item__img">
-            <img src="/assets/img/research/collectivebios.jpg" alt="Collective Biographies of Women">
+            <img src="../../assets/img/research/collectivebios.jpg" alt="Collective Biographies of Women">
           </div>
           <div class="research-item__title">Collective Biographies of Women</div>
         </a>
@@ -166,7 +166,7 @@
       <div class="research__item">
         <a href="/research/faulkner-at-virginia-an-audio-archive" aria-label="Faulkner at Virginia - An Audio Archive">
           <div class="research-item__img">
-            <img src="/assets/img/research/faulkner.jpg" alt="Faulkner at Virginia - An Audio Archive">
+            <img src="../../assets/img/research/faulkner.jpg" alt="Faulkner at Virginia - An Audio Archive">
           </div>
           <div class="research-item__title">Faulkner at Virginia - An Audio Archive</div>
         </a>
@@ -176,7 +176,7 @@
       <div class="research__item">
         <a href="/research/for-better-for-verse" aria-label="For Better for Verse">
           <div class="research-item__img">
-            <img src="/assets/img/research/forbetterforverse.jpg" alt="For Better for Verse">
+            <img src="../../assets/img/research/forbetterforverse.jpg" alt="For Better for Verse">
           </div>
           <div class="research-item__title">For Better for Verse</div>
         </a>
@@ -186,7 +186,7 @@
       <div class="research__item">
         <a href="/research/jeffersons-notes-on-the-state-of-virginia" aria-label="Jefferson &#8217;s Notes on the State of Virginia">
           <div class="research-item__img">
-            <img src="/assets/img/research/jefferson-flipped.jpg" alt="Jefferson &#8217;s Notes on the State of Virginia">
+            <img src="../../assets/img/research/jefferson-flipped.jpg" alt="Jefferson &#8217;s Notes on the State of Virginia">
           </div>
           <div class="research-item__title">Jefferson &#8217;s Notes on the State of Virginia</div>
         </a>
@@ -196,7 +196,7 @@
       <div class="research__item">
         <a href="/research/latvian-dainas" aria-label="Latvian Dainas">
           <div class="research-item__img">
-            <img src="/assets/img/research/latvian-dainas.png" alt="Latvian Dainas">
+            <img src="../../assets/img/research/latvian-dainas.png" alt="Latvian Dainas">
           </div>
           <div class="research-item__title">Latvian Dainas</div>
         </a>
@@ -206,7 +206,7 @@
       <div class="research__item">
         <a href="/research/mapping-the-catalogue-of-ships" aria-label="Mapping the Catalogue of Ships">
           <div class="research-item__img">
-            <img src="/assets/img/research/catalogofships.jpg" alt="Mapping the Catalogue of Ships">
+            <img src="../../assets/img/research/catalogofships.jpg" alt="Mapping the Catalogue of Ships">
           </div>
           <div class="research-item__title">Mapping the Catalogue of Ships</div>
         </a>
@@ -216,7 +216,7 @@
       <div class="research__item">
         <a href="/research/presidents-commission-on-slavery-and-the-university" aria-label="President &#8217;s Commission on Slavery and the University">
           <div class="research-item__img">
-            <img src="/assets/img/research/slaveryUVa-header.png" alt="President &#8217;s Commission on Slavery and the University">
+            <img src="../../assets/img/research/slaveryUVa-header.png" alt="President &#8217;s Commission on Slavery and the University">
           </div>
           <div class="research-item__title">President &#8217;s Commission on Slavery and the University</div>
         </a>
@@ -226,7 +226,7 @@
       <div class="research__item">
         <a href="/research/salem-witch-trials" aria-label="Salem Witch Trials">
           <div class="research-item__img">
-            <img src="/assets/img/research/salemwitchtrials.jpg" alt="Salem Witch Trials">
+            <img src="../../assets/img/research/salemwitchtrials.jpg" alt="Salem Witch Trials">
           </div>
           <div class="research-item__title">Salem Witch Trials</div>
         </a>
@@ -236,7 +236,7 @@
       <div class="research__item">
         <a href="/research/thl-place-dictionary" aria-label="THL Place Dictionary">
           <div class="research-item__img">
-            <img src="/assets/img/research/thlplace.jpg" alt="THL Place Dictionary">
+            <img src="../../assets/img/research/thlplace.jpg" alt="THL Place Dictionary">
           </div>
           <div class="research-item__title">THL Place Dictionary</div>
         </a>
@@ -246,7 +246,7 @@
       <div class="research__item">
         <a href="/research/the-falmouth-project" aria-label="The Falmouth Project">
           <div class="research-item__img">
-            <img src="/assets/img/research/falmouth.jpg" alt="The Falmouth Project">
+            <img src="../../assets/img/research/falmouth.jpg" alt="The Falmouth Project">
           </div>
           <div class="research-item__title">The Falmouth Project</div>
         </a>
@@ -256,7 +256,7 @@
       <div class="research__item">
         <a href="/research/the-mind-is-a-metaphor" aria-label="The Mind is a Metaphor">
           <div class="research-item__img">
-            <img src="/assets/img/research/mindmetaphor.jpg" alt="The Mind is a Metaphor">
+            <img src="../../assets/img/research/mindmetaphor.jpg" alt="The Mind is a Metaphor">
           </div>
           <div class="research-item__title">The Mind is a Metaphor</div>
         </a>
@@ -266,7 +266,7 @@
       <div class="research__item">
         <a href="/research/the-university-of-virginia-art-museum-numismatic-collection" aria-label="The University of Virginia Art Museum Numismatic Collection">
           <div class="research-item__img">
-            <img src="/assets/img/research/coins.jpg" alt="The University of Virginia Art Museum Numismatic Collection">
+            <img src="../../assets/img/research/coins.jpg" alt="The University of Virginia Art Museum Numismatic Collection">
           </div>
           <div class="research-item__title">The University of Virginia Art Museum Numismatic Collection</div>
         </a>
@@ -286,7 +286,7 @@
 
     <div class="footer__to-top">
         <a href="#main" aria-label="Back to top">
-          <img src="/assets/img/thin-up-arrow-white.svg" alt="Up arrow">
+          <img src="../../assets/img/thin-up-arrow-white.svg" alt="Up arrow">
           <span>Back<br/>to top</span>
         </a>
     </div>
@@ -305,19 +305,19 @@
       <div class="footer-connect__title">Connect</div>
       <div class="footer-connect__social">
         <a href="https://www.facebook.com/scholarslab/">
-          <img src="/assets/img/facebook-white.svg" alt="Facebook icon">
+          <img src="../../assets/img/facebook-white.svg" alt="Facebook icon">
           <span>Facebook</span>
         </a>
         <a href="https://twitter.com/scholarslab">
-          <img src="/assets/img/twitter-white.svg" alt="Twitter icon">
+          <img src="../../assets/img/twitter-white.svg" alt="Twitter icon">
           <span>Twitter</span>
         </a>
         <a href="https://github.com/scholarslab">
-          <img src="/assets/img/github-white.svg" alt="Github icon">
+          <img src="../../assets/img/github-white.svg" alt="Github icon">
           <span>Github</span>
         </a>
         <a href="mailto:scholarslab@virginia.edu">
-          <img src="/assets/img/envelope-outline-white.svg" alt="Email icon">
+          <img src="../../assets/img/envelope-outline-white.svg" alt="Email icon">
           <span>Email us</span>
         </a>
       </div>
@@ -336,9 +336,9 @@
     </div>
 
     <div class="footer__logos">
-      <a href="#" class="footer-logo__slab" aria-label="Scholars' Lab home"><img src="/assets/img/slab-logo-color-white.svg" alt="SLab logo"></a>
+      <a href="#" class="footer-logo__slab" aria-label="Scholars' Lab home"><img src="../../assets/img/slab-logo-color-white.svg" alt="SLab logo"></a>
       <span>proudly part of</span>
-      <a href="#" class="footer-logo__uva" aria-label="UVA Library home"><img src="/assets/img/uva-library-text-block-white.svg" alt="UVA Library logo"></a>
+      <a href="#" class="footer-logo__uva" aria-label="UVA Library home"><img src="../../assets/img/uva-library-text-block-white.svg" alt="UVA Library logo"></a>
     </div>
 
   </div>
