Add dummy photo for SLab item so dimensions are normal

--- a/theme-testing/pages/research.html
+++ b/theme-testing/pages/research.html
@@ -127,7 +127,7 @@
       <div class="research__item">
         <a href="/research/the-scholars-lab" aria-label="The Scholars' Lab">
           <div class="research-item__img">
-            <img src="../../assets/img/research/none" alt="The Scholars' Lab">
+            <img src="../../assets/img/research/catalogofships.jpg" alt="The Scholars' Lab">
           </div>
           <div class="research-item__title">The Scholars' Lab</div>
         </a>
