Change 'and' -> '&' in gallery title

--- a/theme-testing/pages/research.html
+++ b/theme-testing/pages/research.html
@@ -39,7 +39,7 @@
 
   <!-- internal projects: -->
   <div class="research-items__internal">
-    <div class="research-internal__big-title">Internal Projects and Community Service</div>
+    <div class="research-internal__big-title">Internal Projects & Community Service</div>
     <div class="research-internal__subtitle">Software, projects, and tools developed by Scholars’ Lab staff.</div>
     <div class="research-items-wrapper">
     
