Add dummy description to Research landing (stole from WP site description)

--- a/theme-testing/pages/research.html
+++ b/theme-testing/pages/research.html
@@ -28,7 +28,7 @@
     <div class="research-landing__big-title" aria-label="Landing page">
       <div class="research-title__text">Research</div>
     </div>
-    <div class="research-landing__description">A sentence or so describing the purpose of this page.</div>
+    <div class="research-landing__description">A sentence or so describing the purpose of this page. Its purpose is to highlight research done in collaboration with the Scholars' Lab or relating to themes and issues relevant to digital scholarship in the humanities and social sciences.</div>
   </div>
 </div>
 
