Add updated Research page description (did have dummy text)

--- a/theme-testing/pages/research.html
+++ b/theme-testing/pages/research.html
@@ -11,7 +11,7 @@
   
   <meta name="description" content="The Scholars’ Lab">
 
-  <link href="https://fonts.googleapis.com/icon?family=Raleway:200,400,700,900|Montserrat:200,400,700|Oswald:200,400,600|Inconsolata:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Raleway:200,400,700,900|Montserrat:200,400,700|Oswald:200,300,400,600|Inconsolata:400,700" rel="stylesheet">
   <link rel="stylesheet" href="https://use.typekit.net/xpo3dxq.css">
   <link rel="stylesheet" href="../style.css">
   <link rel="canonical" href="http://localhost:4000/research/">
@@ -28,7 +28,7 @@
     <div class="research-landing__big-title" aria-label="Landing page">
       <div class="research-title__text">Research</div>
     </div>
-    <div class="research-landing__description">A sentence or so describing the purpose of this page. Its purpose is to highlight research done in collaboration with the Scholars' Lab or relating to themes and issues relevant to digital scholarship in the humanities and social sciences.</div>
+    <div class="research-landing__description">Scholarship is one part critical thinking (research, writing, coding, building, designing, experimenting, play…) and one part communication (traditional publishing and other forms of “making public”, teaching, open source code, other ways for your intellectual community to learn from and build on your work). This page shares a sampling of the Scholars’ Lab scholarship in its many states and forms, from incipient ideas to projects with their own laptop stickers.</div>
   </div>
 </div>
 
