Add updated phrasing for research intro

--- a/theme-testing/pages/research.html
+++ b/theme-testing/pages/research.html
@@ -28,7 +28,10 @@
     <div class="research-landing__big-title" aria-label="Landing page">
       <div class="research-title__text">Research</div>
     </div>
-    <div class="research-landing__description">Scholarship is one part critical thinking (research, writing, coding, building, designing, experimenting, play…) and one part communication (traditional publishing and other forms of “making public”, teaching, open source code, other ways for your intellectual community to learn from and build on your work). This page shares a sampling of the Scholars’ Lab scholarship in its many states and forms, from incipient ideas to projects with their own laptop stickers.</div>
+    <div class="research-landing__description">
+      <p>Scholarship is one part critical thinking (research, writing, coding, building, designing, experimenting, play…) and one part communication (traditional publishing and other forms of “making public”, teaching, open source code, other ways for your intellectual community to learn from and build on your work).</p>
+      <p>This page shares a sampling of the Scholars’ Lab scholarship in its many states and forms, from incipient ideas to projects with their own laptop stickers.</p>
+    </div>
   </div>
 </div>
 
@@ -39,7 +42,7 @@
 
   <!-- internal projects: -->
   <div class="research-items__internal">
-    <div class="research-internal__big-title">Internal Projects & Community Service</div>
+    <div class="research-internal__big-title">Internal Projects<br/>& Community Service</div>
     <div class="research-internal__subtitle">Software, projects, and tools developed by Scholars’ Lab staff.</div>
     <div class="research-items-wrapper">
     
