Add 'status' & 'notes' frontmatter vars; reorder frontmatter for consistency

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 ---
-layout: no-header
+layout: default
 title: Home
+status: in progress
+notes:
+- About 80% finished
+- Needs some styling and probably a custom topnav that's not so obtrusive
+- Also none of the links are real, so, y'know, fix that part
 ---
 
 <div class="home-landing-grid">
