--- a/pages/fellowship.html
+++ b/pages/fellowship.html
@@ -2,6 +2,11 @@
 layout: no-header
 title: Fellowship Layout
 permalink: /fellowship/
+status: in progress
+notes:
+- Provides layout model for pages in 'graduate-opportunities/'
+- HTML layout pretty much done; styling about 50%
+- NOT the same as /fellowships/, which displays the 'list' of fellowships available
 # test vars:
 post-title: Praxis Program Fellowships
 ---
