--- a/pages/logos.html
+++ b/pages/logos.html
@@ -1,7 +1,12 @@
 ---
-layout: no-header
+layout: default
 title: Logo Testing
 permalink: /logos/
+status: finished
+notes:
+- This is just a pre-production page to view logo design process
+- Should not be displayed once new site is deployed
+- Might put contents in a lab/research page eventually, though, to demonstrate creative process
 ---
 
 {% assign logo_pics = site.static_files | where_exp: "item", "item.path contains 'logo-testing'" %}
