--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -1,7 +1,11 @@
 ---
-layout: no-header
+layout: default
+title: Makerspace
 permalink: /makerspace/
-title: Makerspace | Scholars' Lab
+status: in progress
+notes:
+- Incorporate Shane's new pics!
+- Probably about 80% finished
 ---
 
 <div class="makerspace-landing-grid">
