--- a/pages/research.html
+++ b/pages/research.html
@@ -1,7 +1,12 @@
 ---
 layout: default
-permalink: /research/
 title: Research
+permalink: /research/
+status: in progress
+notes:
+- Main topic page (linked from homepage)
+- About 80% done
+- Mostly SCSS tweaks on gallery display left to incorporate
 ---
 
 <div class="research-landing-wrapper">
