--- a/pages/search.html
+++ b/pages/search.html
@@ -1,8 +1,10 @@
 ---
 layout: page
 title: Search
-link: /search
-slug: search
+permalink: /search/
+notes:
+- Search itself currently doesn't work
+- Ask Zoe to update once site contents are mostly stable
 ---
 <br/>&nbsp;
 <form action="get" id="site_search">
