--- a/pages/text.html
+++ b/pages/text.html
@@ -1,7 +1,12 @@
 ---
-layout: no-header
+layout: default
 title: Text-Based Page
-permalink: /text/
+permalink: /text-page-layout/
+status: in progress
+notes:
+- Model layout page for anything that's mostly body text, like a blog post
+- Should not appear in production
+- 'Reason: there are like 80 million blog posts so KBD is making the layout first, since that takes less time to build as one page.'
 # test vars:
 post-title: Text-Based Page, Like a Blog Post
 author: Katherine Donnally
