--- a/pages/events.html
+++ b/pages/events.html
@@ -1,7 +1,12 @@
 ---
-layout: no-header
+layout: page
 title: Events
 permalink: /events/
+status: in progress
+notes:
+- Need to finalize metadata
+- Need to design actual 'event' pages
+- Need to finalize layout for this page, tho basis is 'sections' pattern
 ---
 
 <h2>Current and past events hosted, sponsored, or partnered on by the Scholars' Lab.</h2>
