Update notes var on homepage

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@ status: in progress
 notes:
 - About 80% finished
 - Needs some styling and probably a custom topnav that's not so obtrusive
-- Also none of the links are real, so, y'know, fix that part
+- Also none of the links are real -> insert real hrefs
+- Standardize font sizing on 1st vs. 2nd half of page
+- Test color change thing w/ site theme colors
+- Restyle hero section
 ---
 
 <div class="home-landing-grid">
