Update research gallery HTML w/ stuff from theme-testing/ version

--- a/pages/research.html
+++ b/pages/research.html
@@ -5,8 +5,7 @@ permalink: /research/
 status: in progress
 notes:
 - Main topic page (linked from homepage)
-- About 80% done
-- Mostly SCSS tweaks on gallery display left to incorporate
+- About 60% done -> SCSS proving quite challenging
 ---
 
 <div class="research-landing-wrapper">
@@ -14,7 +13,10 @@ notes:
     <div class="research-landing__big-title" aria-label="Landing page">
       <div class="research-title__text">Research</div>
     </div>
-    <div class="research-landing__description">A sentence or so describing the purpose of this page.</div>
+    <div class="research-landing__description">
+      <p>Scholarship is one part critical thinking (research, writing, coding, building, designing, experimenting, play…) and one part communication (traditional publishing and other forms of “making public”, teaching, open source code, other ways for your intellectual community to learn from and build on your work).</p>
+      <p>This page shares a sampling of the Scholars’ Lab scholarship in its many states and forms, from incipient ideas to projects with their own laptop stickers.</p>
+    </div>
   </div>
 </div>
 
@@ -36,6 +38,7 @@ notes:
             <img src="{{ '/assets/img/research/' | append: page.preview-img | relative_url }}" alt="{{ page.title }}">
           </div>
           <div class="research-item__title">{{ page.title }}</div>
+          <div class="research-item__year">2012</div>
         </a>
       </div>
     {% endfor %}
@@ -55,6 +58,7 @@ notes:
             <img src="{{ '/assets/img/research/' | append: page.preview-img | relative_url }}" alt="{{ page.title }}">
           </div>
           <div class="research-item__title">{{ page.title }}</div>
+          <div class="research-item__year">2012</div>
         </a>
       </div>
     {% endfor %}
