Change class names on gallery titles

--- a/pages/research.html
+++ b/pages/research.html
@@ -27,7 +27,7 @@ notes:
 
   <!-- internal projects: -->
   <div class="research-items__internal">
-    <div class="research-internal__title">Internal Projects and Community Service</div>
+    <div class="research-internal__big-title">Internal Projects and Community Service</div>
     <div class="research-internal__subtitle">Software, projects, and tools developed by Scholars’ Lab staff.</div>
     <div class="research-items-wrapper">
     {% for page in internal_projects %}
@@ -47,7 +47,7 @@ notes:
 
   <!-- collaborative projects: -->
   <div class="research-items__collab">
-    <div class="research-collab__title">Scholarly Collaborations</div>
+    <div class="research-collab__big-title">Scholarly Collaborations</div>
     <div class="research-collab__subtitle">Selected Scholars’ Lab collaborations with faculty and graduate students.</div>
     <div class="research-items-wrapper">
     {% for page in collab_projects %}
